# qml2

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
doxygen/: Doxyfile  run_doxygen.py
examples/adaptive_basis_sets/: ex_adaptive_basis_sets_1.py  ex_custom_basis_rescaling_2.py
examples/fjk/: ex_fjk.py  ex_restart_files.py
examples/forces/: ex_calculate_forces.py  ex_calculate_gpr_forces.py
examples/hyperparameter_optimization/: ex_kfold_hyperparameter_optimization.py
examples/models/: ex_Coulomb_Matrix_SORF_model.py  ex_Coulomb_Matrix_model.py  ex_FCHL19_SORF_model.py  ex_FCHL19_model.py  ex_aSLATM_Matern_model.py  ex_aSLATM_SORF_model.py  ex_kfold_hyperparameter_optimization.py
examples/old_qml_interfaces/: old_qml_interfaces.py
examples/sorf/: ex_sorf.py  ex_sorf_hyperparameter_optimization.py
examples/tutorial/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  tutorial_data.py
misc_commands/: spython
qml2/: __init__.py  ase_utils.py  basic_utils.py  compound.py  compound_list.py  data.py  dimensionality_reduction.py  ensemble.py  finite_difference.py  math.py  optimizers.py  parallelization.py  utils.py
qml2/cupy/: __init__.py  gaussian_kernel.cu  global_kernels.py  kernels.cu  kernels.py  l1_metric.cu  l2_metric.cu  matern_0_kernel.cu  matern_1_kernel.cu  matern_2_kernel.cu  models.py  raw_kernel_common.cu  raw_kernels.py
qml2/dataset_formats/: FreeSolv.py  atmospheric_UV.py  literature_electrochemical_stability.py  qm9.py
qml2/gpytorch/: __init__.py  standard_kernel_interface.py
qml2/jit_interfaces/: __init__.py  jit_manager.py  numba_interface.py  torch_interface.py
qml2/kernels/: __init__.py  gradient_common.py  gradient_hadamard.py  gradient_kernels.py  gradient_sorf.py  hadamard.py  kernels.py  sorf.py
qml2/models/: forces_utils.py  hadamard.py  hadamard_forces.py  hyperparameter_init_guesses.py  hyperparameter_optimization.py  krr.py  krr_forces.py  learning_curves.py  loss_functions.py  math.py  oqml_hyperparameter_optimization.py  property_shifts.py  reduced_hyperparameter_functions.py  sorf.py  sorf_forces.py  sorf_hyperparameter_optimization.py  training_set_optimization.py
qml2/multilevel_sorf/: __init__.py  base_functions.py  large_models.py  math.py  model_uncertainty.py  models.py  pickle.py  sorf_calculation.py  utils.py
qml2/multilevel_sorf/base_constructors/: __init__.py  base.py  common.py  fork.py  (+6 more)
qml2/orb_ml/: __init__.py  aux_classes.py  kernels.py  models.py  molpro_interface.py  oml_compound.py  oml_compound_list.py  optimize_basis_sets.py  representations.py  xtb_interface.py
qml2/representations/: __init__.py  basic_utilities.py  cMBDF.py  calculators.py  element_representations.py  fchl19.py  slatm.py  standard_geometric.py
qml2/test_utils/: autograd.py  lennard_jones_potential.py  toy_representation.py
tests/: conftest.py  qml2_test.yml  test_FJK.py  test_FJK_GPU.py  test_SLATM.py  test_SORF.py  test_aSLATM.py  test_cMBDF.py  test_cupy_kernels.py  test_geometric_representations.py  test_grad_representations.py  test_kernels.py  test_loss_functions.py  test_models.py  test_msorf_features.py  test_msorf_models.py  test_optimize_basis_sets.py  test_optimize_basis_sets_GPU.py
tests/test_data/: QM7_SMILES.txt
(+6 files in other folders)
